# pdpl

./: .gitignore  .gitmodules  3rd_party_licenses.txt  CMakeLists.txt
inject/: CMakeLists.txt
inject/hash/: hash.cmake  hashes.c  hashes.h
inject/src/: filesystem.c  injection.c  injection.h  loader_init.h  main.c  path.h  remote_injection.c  remote_injection.h  self_inject.h
inject/src/inject/: main.c  self_inject.h
payload/: CMakeLists.txt
payload/src/: console.c  dll_main.c
pdpl/: CMakeLists.txt
pdpl/src/: console.c  dll_main.c  hooks.c  hooks.h  loader_init.c  path.c  path.h  remote_injection.c  self_inject.c
pdpl/src/inject/: main.c  self_inject.c
pdpm/: CMakeLists.txt
pdpm/src/: atomic_log.c  atomic_log.h  console.c  console.h  dll_main.c  filesystem.c  hooks.c  hooks.h  injection.c  injection.h  path.c  path.h  plugins.c
src/: dll.c  dll.h  hooks.c  main.c  path.c  process.c  process.h  remote_injection.c  self_inject.c  self_inject.h
test_plugin/: CMakeLists.txt
test_plugin/src/: dll_main.c
